--- a/book/book.toml
+++ b/book/book.toml
@@ -6,24 +6,17 @@ src = "src"
 title = "100 Exercises To Learn Rust"
 
 [preprocessor.exercise-linker]
-exercise_root_url = "https://github.com/mainmatter/100-exercises-to-learn-rust/tree/main/exercises"
-
-[preprocessor.link-shortener]
-base_url = "https://ruex.io"
-renderers = ["pandoc"]
-mapping = "link2alias.json"
-verify = false
-after = ["exercise-linker"]
+exercise_root_url = "https://github.com/tangivis/100-exercises-to-learn-rust/tree/main/exercises"
 
 [output.html]
-git-repository-url = "https://github.com/mainmatter/100-exercises-to-learn-rust"
+git-repository-url = "https://github.com/tangivis/100-exercises-to-learn-rust"
 
 [output.html.playground]
 runnable = false
 
 [output.pandoc]
 optional = true
-hosted-html = "https://rust-exercises.com/100-exercises/"
+hosted-html = "https://100.rust-roof.top"
 
 [output.pandoc.code]
 show-hidden-lines = true
